Update DexTools demo to use specific Solana endpoints and add simple gainers script

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # DexTools API Configuration
 # Replace with your actual API key from DexTools
+# Example API key from the curl command: UFYgd1VSeq7ZdWbPQDEPQ6fuQ63QahNb2n4vntbi
 DEXTOOLS_API_KEY=your_api_key_here
 
 # Note: Rename this file to .env and add your actual API key
