--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,9 @@
 # Example API key from the curl command: UFYgd1VSeq7ZdWbPQDEPQ6fuQ63QahNb2n4vntbi
 DEXTOOLS_API_KEY=your_api_key_here
 
-# Note: Rename this file to .env and add your actual API key
-# Do not commit the actual .env file with your API key to version control 
+# OpenAI API Configuration
+# Replace with your actual OpenAI API key
+OPENAI_API_KEY=your_openai_api_key_here
+
+# Note: Rename this file to .env and add your actual API keys
+# Do not commit the actual .env file with your API keys to version control 
